--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby": "^2.15.29",
     "gatsby-cli": "^2.12.19",
     "gatsby-image": "^2.2.39",
+    "gatsby-plugin-netlify": "^2.3.2",
     "gatsby-plugin-react-helmet": "^3.1.10",
     "gatsby-plugin-sharp": "^2.3.13",
     "gatsby-plugin-styled-components": "^3.1.8",
