--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.6",
     "classnames": "^2.2.6",
-    "gatsby": "^4.9.0",
-    "gatsby-cli": "^4.9.0",
-    "gatsby-image": "^3.11.0",
+    "gatsby": "^4.10.1",
+    "gatsby-cli": "^4.10.1",
+    "gatsby-plugin-image": "^2.10.0",
     "gatsby-plugin-netlify": "^4.1.0",
-    "gatsby-plugin-react-helmet": "^5.9.0",
-    "gatsby-plugin-sharp": "^4.9.0",
-    "gatsby-plugin-styled-components": "^5.9.0",
-    "gatsby-remark-images": "^6.9.0",
-    "gatsby-source-filesystem": "^4.9.0",
-    "gatsby-transformer-remark": "^5.9.0",
-    "gatsby-transformer-sharp": "^4.9.0",
+    "gatsby-plugin-react-helmet": "^5.10.0",
+    "gatsby-plugin-sharp": "^4.10.1",
+    "gatsby-plugin-styled-components": "^5.10.0",
+    "gatsby-remark-images": "^6.10.1",
+    "gatsby-source-filesystem": "^4.10.0",
+    "gatsby-transformer-remark": "^5.10.1",
+    "gatsby-transformer-sharp": "^4.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
@@ -34,7 +34,7 @@
     "update": "^0.7.4"
   },
   "devDependencies": {
-    "prettier": "^2.5.1"
+    "prettier": "^2.6.0"
   },
   "repository": {
     "type": "git",
