--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.6",
     "classnames": "^2.2.6",
-    "gatsby": "^4.10.1",
+    "gatsby": "=4.1.3",
     "gatsby-cli": "^4.10.1",
     "gatsby-plugin-image": "^2.10.0",
     "gatsby-plugin-netlify": "^4.1.0",
