Boostrap Saule au Monde

--- a/src/data/menu.yaml
+++ b/src/data/menu.yaml
@@ -1,5 +1,6 @@
-- Nos cabanes(/#epicea-souhait):
-    - Épicea souhait(/#epicea-souhait)
+- Nos cabanes(/#saules-au-monde):
+    - Saules au Monde(/#saules-au-monde)
+    - Épicea Souhait(/#epicea-souhait)
     - Pin en Vert(/#pin-en-vert)
     - Houx Blond(/#houx-blond)
     - Des Chesnaies(/#des-chesnaies)
