New saules au monde

--- a/src/data/menu.yaml
+++ b/src/data/menu.yaml
@@ -1,5 +1,5 @@
 - Nos cabanes(/#saules-au-monde):
-    - Saules au Monde(/#saules-au-monde)
+    - -new-Saules au Monde(/#saules-au-monde)
     - Épicea Souhait(/#epicea-souhait)
     - Pin en Vert(/#pin-en-vert)
     - Houx Blond(/#houx-blond)
