--- a/package.json
+++ b/package.json
@@ -13,29 +13,29 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   },
   "dependencies": {
-    "babel-plugin-styled-components": "^2.0.6",
-    "classnames": "^2.2.6",
-    "gatsby": "=4.1.3",
-    "gatsby-cli": "^4.10.1",
-    "gatsby-plugin-image": "^2.10.0",
-    "gatsby-plugin-netlify": "^4.1.0",
+    "babel-plugin-styled-components": "^2.0.7",
+    "classnames": "^2.3.2",
+    "gatsby": "5.8.1",
+    "gatsby-cli": "^5.8.0",
+    "gatsby-plugin-image": "^3.8.0",
+    "gatsby-plugin-netlify": "^5.1.0",
     "gatsby-plugin-no-index": "^1.0.2",
-    "gatsby-plugin-react-helmet": "^5.10.0",
-    "gatsby-plugin-sharp": "^4.10.1",
-    "gatsby-plugin-styled-components": "^5.10.0",
-    "gatsby-remark-images": "^6.10.1",
-    "gatsby-source-filesystem": "^4.10.0",
-    "gatsby-transformer-remark": "^5.10.1",
-    "gatsby-transformer-sharp": "^4.10.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "gatsby-plugin-react-helmet": "^6.8.0",
+    "gatsby-plugin-sharp": "^5.8.1",
+    "gatsby-plugin-styled-components": "^6.8.0",
+    "gatsby-remark-images": "^7.8.0",
+    "gatsby-source-filesystem": "^5.8.0",
+    "gatsby-transformer-remark": "^6.8.0",
+    "gatsby-transformer-sharp": "^5.8.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.0.0",
+    "styled-components": "^5.3.9",
     "to": "^0.2.9",
     "update": "^0.7.4"
   },
   "devDependencies": {
-    "prettier": "^2.6.0"
+    "prettier": "^2.8.7"
   },
   "repository": {
     "type": "git",
